@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'css/main.css' %}" typer="css">
-    <title>Home</title>
+    <title>Cadastro de Cestas</title>
 </head>
 <body>
     {% include 'includes/nav.html' %}
